@@ -9,6 +9,7 @@ Nov-10-2006 Yen-Ju Chen <yjchenx at gmail>
 	* Use timer and queue to schedule feed fetching.
 	* Work on GNUstep.
 	* Improve speed by reducing updating internal articles cache.
+	* Use autorelease pool on heavy process to reduce memory usage.
 
 Nov-09-2006 Yen-Ju Chen <yjchenx at gmail>
 	* Use PKPane for Log.
